--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
+    "prettier-eslint": "^16.3.0",
     "vite": "^5.1.4"
   },
   "dependencies": {
